[tool.poetry]
name = "bond_screener"
version = "0.1.0"
description = "Bond Screener Using AI for Corporate Bonds"
authors = ["Joseph Valencia <valencia.joseph.e@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.18.0"
sqlalchemy = "^1.4.0"
databases = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
